tools/tests/errors/super_no_base.ki
class Lonely:
    var go = Function(self):
        return self._super_()
Lonely().go()
